[package]
name = "hartex-rust"
version = "0.3.1"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
categories = ["concurrency", "embedded", "no-std"]
keywords = ["arm", "cortex-m"]
readme = "README.md"
description = "A safe and lightweight real-time Kernel."

[build-dependencies]
cc = "1.0.28"

[dependencies]
cortex-m-semihosting = "0.3.2"
cortex-m = {version="0.6.1", features=["inline-asm","const-fn"]}
cortex-m-rt = "*"
alloc-cortex-m = { version="0.3.5", optional=true }

[features]
tasks_32 = []
tasks_16 = []
tasks_8 = []

alloc = ["alloc-cortex-m"]

default = []

[lib]
test = false
bench = false