[package]
authors = ["Nipun Kumar <nipunkumar@outlook.com>"]
edition = "2018"
readme = "README.md"
name = "qemu-m4"
version = "0.1.0"

[dependencies]
cortexm-threads = { path = "../.." }
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"

# this lets you use `cargo fix`!
[[bin]]
name = "qemu-m4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
