[package]
name = "qemu-m4"
version = "0.2.0"
authors = ["kanishkarj"]
edition = "2018"

[dependencies]
hartex-rust = { path = "../.." }
cortex-m = {version="0.5.8", features=["inline-asm"]}
cortex-m-rt = "*"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.5"

[dependencies.stm32f4]
version = "0.8.0"
features = ["stm32f407", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "qemu-m4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
