[package]
name = "qemu-m4"
version = "0.2.0"
authors = ["kanishkarj"]
edition = "2018"

[dependencies]
hartex-rust = { path = "../..", features=["alloc","tasks_16","events_16","process_monitor"] }
cortex-m = {version="0.6.1", features=["inline-asm"]}
cortex-m-rt = "*"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.5"
alloc-cortex-m = "0.3.5"
lazy_static = {version="1.4.0", features=["spin_no_std"]}

[dependencies.stm32f4]
version = "0.8.0"
features = ["stm32f407", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "qemu-m4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations