[package]
name = "stm32f4"
version = "0.2.0"
authors = ["kanishkarj"]
edition = "2018"

[dependencies]
hartex-rust = { path = "../.." }
cortex-m = {version="0.6.1", features=["inline-asm"]}
cortex-m-rt = "*"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.5"
lazy_static = {version="1.4.0", features=["spin_no_std"]}

[dependencies.stm32f4]
version = "0.8.0"
features = ["stm32f407", "rt"]

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
